FIX/ Refactor code to align with design

--- a/src/Pages/Modal.scss
+++ b/src/Pages/Modal.scss
@@ -42,17 +42,17 @@
   }
 
   &__dets {
-    height: 85%;
+    height: 95%;
     overflow-y: scroll;
     position: relative;
-    width: 55%;
+    width: 95%;
     text-align: left;
     padding: 2rem;
-    background-color: #f5f5f5;
+    background-color: var(--color-btn);
     border-radius: 7px;
-    border: 1px solid #ededed;
+    // border: 1px solid #ededed;
     box-shadow: 2px 2px 7px 2px #242424;
-    color: var(--color-black);
+    color: var(--color-white);
 
     @include respond(tab) {
       width: 80%;
