--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --color-black: #2d2d2d;
   --color-gray: #858585;
   --color-btn: #1c0b19;
-  --color-white: #ffffff;
+  --color-white: #f7f7f7;
   --border-radius-btn: 18px;
   --padding-btn: 0.8rem 1.6rem;
   --padding-btn-sm: 0.2rem 1rem;
